fixed error for seo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="keywords" content="Mohammed Saif, Mohammed Saif Adhiyamaan, Adhiyamaan College of Engineering, ACE Hosur, web developer, app developer, CSE student, portfolio, Hosur">
         <meta name="author" content="Mohammed Saif">
         <meta name="robots" content="index, follow">
-        <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+        <link rel="sitemap" type="application/xml" title="Sitemap" href="https://mohammedsaif.netlify.app/sitemap.xml">
         <meta name="google-site-verification" content="FQG15Hj8p09vNtKZOVhpBjhC-xS5VJOZfWf3lh0Cch8" />
 
         <meta name="geo.region" content="IN-TN" />
