added snc luxurious project

--- a/index.html
+++ b/index.html
@@ -328,7 +328,40 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card" data-aos="fade-up">
+                <div class="project-image">
+                    <img src="/img/projects/SNC luxurious.png" alt="SNC Luxurious PG Project">
+                    <div class="project-overlay">
+                        <div class="project-links">
+                            <a href="https://github.com/MohammedSaif05/snc-luxurious-pg" target="_blank"><i class="ri-github-line"></i></a>
+                            <a href="https://sncluxuriouspg.in/" target="_blank"><i class="ri-external-link-line"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-content">
+                    <h3>SNC Luxurious PG - Landing Page</h3>
+                    <p>A user-friendly landing page for SNC Luxurious PG, allowing users to book rooms via WhatsApp, view room details, pricing plans, food menu, and facilities. The page also includes a Google Map for directions.</p>
+                    
+                    <div class="project-features">
+                        <h4>Key Features:</h4>
+                        <ul>
+                            <li>🔹 Room booking through WhatsApp</li>
+                            <li>🔹 Detailed room descriptions and images</li>
+                            <li>🔹 Pricing plans for different room types</li>
+                            <li>🔹 Food menu and facilities overview</li>
+                            <li>🔹 Google Map integration for directions</li>
+                        </ul>
+                    </div>
             
+                    <div class="project-tags">
+                        <span>Landing Page</span>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                        <span>AOS Library</span>
+                    </div>
+                </div>
+            </div>
             <!-- Add more project cards as needed -->
         </div>
     </div>
